[gd_scene load_steps=12 format=3 uid="uid://duy1epxvcjevs"]

[ext_resource type="Script" path="res://addons/TopNote/Panel/Panel.gd" id="1_c5iwg"]
[ext_resource type="Texture2D" uid="uid://de5qk4c15wccy" path="res://addons/TopNote/PulsePH.png" id="2_84iuo"]
[ext_resource type="Texture2D" uid="uid://dsn5q0bt5g44c" path="res://addons/TopNote/Icons/None.png" id="2_218q4"]
[ext_resource type="Script" path="res://addons/TopNote/Panel/Sample.gd" id="3_mlh55"]
[ext_resource type="Texture2D" uid="uid://bjhss1hyclm3l" path="res://addons/TopNote/Icons/ActionCopy.svg" id="5_kbrjv"]
[ext_resource type="Script" path="res://addons/TopNote/Panel/SavedCode.gd" id="5_n5mv1"]
[ext_resource type="Texture2D" uid="uid://ekuityj5n0b4" path="res://addons/TopNote/Icons/Edit.svg" id="6_8vtjc"]
[ext_resource type="Script" path="res://addons/TopNote/Panel/Window3.gd" id="6_gujsj"]
[ext_resource type="Texture2D" uid="uid://ck6fw6q70guu7" path="res://addons/TopNote/Icons/Remove.svg" id="7_q1sdj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1nr0j"]

[sub_resource type="Theme" id="Theme_ivb5q"]
CheckBox/colors/font_hover_pressed_color = Color(1, 1, 1, 0.356863)
CheckBox/colors/font_pressed_color = Color(1, 1, 1, 0.356863)
CheckBox/styles/focus = SubResource("StyleBoxEmpty_1nr0j")

[node name="TopNote" type="Control"]
custom_minimum_size = Vector2(200, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5iwg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Tab" type="TabContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
use_hidden_tabs_for_min_size = true

[node name="Notes" type="TextEdit" parent="VBox/Tab"]
layout_mode = 2
theme_override_colors/current_line_color = Color(1, 1, 1, 0.0784314)
placeholder_text = "Enter Note..."
deselect_on_focus_loss_enabled = false
wrap_mode = 1
scroll_smooth = true
scroll_past_end_of_file = true
highlight_current_line = true

[node name="ToDo" type="VBoxContainer" parent="VBox/Tab"]
visible = false
layout_mode = 2

[node name="Sample" type="CheckBox" parent="VBox/Tab/ToDo"]
visible = false
layout_mode = 2
theme = SubResource("Theme_ivb5q")
text = "Report Bugs"
icon = ExtResource("2_218q4")
flat = true
text_overrun_behavior = 3
clip_text = true
expand_icon = true
script = ExtResource("3_mlh55")

[node name="Tools" type="HBoxContainer" parent="VBox/Tab/ToDo"]
layout_mode = 2

[node name="Search" type="LineEdit" parent="VBox/Tab/ToDo/Tools"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="Filter" type="OptionButton" parent="VBox/Tab/ToDo/Tools"]
layout_mode = 2
item_count = 4
selected = 0
allow_reselect = true
popup/item_0/text = "All"
popup/item_0/id = 0
popup/item_1/text = "Add Feautre"
popup/item_1/id = 1
popup/item_2/text = "Fix Bug"
popup/item_2/id = 2
popup/item_3/text = "None"
popup/item_3/id = 3

[node name="RemoveMode" type="Button" parent="VBox/Tab/ToDo/Tools"]
layout_mode = 2
toggle_mode = true
text = "Remove Mode"

[node name="Add" type="HBoxContainer" parent="VBox/Tab/ToDo"]
layout_mode = 2

[node name="Text" type="LineEdit" parent="VBox/Tab/ToDo/Add"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Add New"

[node name="Type" type="OptionButton" parent="VBox/Tab/ToDo/Add"]
layout_mode = 2
item_count = 3
selected = 2
allow_reselect = true
popup/item_0/text = "New Feature"
popup/item_0/id = 0
popup/item_1/text = "Fix Bug"
popup/item_1/id = 1
popup/item_2/text = "None"
popup/item_2/id = 2

[node name="Add" type="Button" parent="VBox/Tab/ToDo/Add"]
layout_mode = 2
text = "Add"

[node name="Scroll" type="ScrollContainer" parent="VBox/Tab/ToDo"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="VBox/Tab/ToDo/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Codes" type="VBoxContainer" parent="VBox/Tab"]
visible = false
layout_mode = 2

[node name="Sample" type="VBoxContainer" parent="VBox/Tab/Codes"]
visible = false
layout_mode = 2
script = ExtResource("5_n5mv1")

[node name="Name" type="Label" parent="VBox/Tab/Codes/Sample"]
layout_mode = 2
text = "Test"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBox" type="HBoxContainer" parent="VBox/Tab/Codes/Sample"]
layout_mode = 2

[node name="Copy" type="Button" parent="VBox/Tab/Codes/Sample/HBox"]
layout_mode = 2
tooltip_text = "Copy Code"
icon = ExtResource("5_kbrjv")

[node name="Edit" type="Button" parent="VBox/Tab/Codes/Sample/HBox"]
layout_mode = 2
tooltip_text = "Edit Save (Open Editor & Rename Tool)"
icon = ExtResource("6_8vtjc")

[node name="Remove" type="Button" parent="VBox/Tab/Codes/Sample/HBox"]
layout_mode = 2
tooltip_text = "Remove Save"
icon = ExtResource("7_q1sdj")

[node name="Find" type="HBoxContainer" parent="VBox/Tab/Codes"]
layout_mode = 2

[node name="Search" type="LineEdit" parent="VBox/Tab/Codes/Find"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="Filter" type="OptionButton" parent="VBox/Tab/Codes/Find"]
layout_mode = 2
item_count = 2
selected = 0
allow_reselect = true
popup/item_0/text = "Names"
popup/item_0/id = 0
popup/item_1/text = "All"
popup/item_1/id = 1

[node name="New" type="HBoxContainer" parent="VBox/Tab/Codes"]
layout_mode = 2

[node name="Name" type="LineEdit" parent="VBox/Tab/Codes/New"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Code Name"
clear_button_enabled = true

[node name="Add" type="Button" parent="VBox/Tab/Codes/New"]
layout_mode = 2
text = "Add"

[node name="Scroll" type="ScrollContainer" parent="VBox/Tab/Codes"]
layout_mode = 2
size_flags_vertical = 3

[node name="HFlow" type="HFlowContainer" parent="VBox/Tab/Codes/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20

[node name="Linked Notes" type="TextEdit" parent="VBox/Tab"]
visible = false
layout_mode = 2
theme_override_colors/current_line_color = Color(1, 1, 1, 0.0784314)
scroll_smooth = true
scroll_past_end_of_file = true
highlight_current_line = true

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 2

[node name="Menu" type="MenuButton" parent="VBox/HBox"]
layout_mode = 2
text = "Menu"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Move To"
popup/item_0/id = 0
popup/item_1/text = "About"
popup/item_1/id = 1

[node name="MoveTo" type="Window" parent="."]
title = "Move To..."
initial_position = 1
size = Vector2i(300, 300)
visible = false
unresizable = true
always_on_top = true
popup_window = true
extend_to_title = true

[node name="Move To" type="ItemList" parent="MoveTo"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
allow_reselect = true
item_count = 19
item_0/text = "Bottom Panel"
item_1/text = "Toolbar"
item_2/text = "3D Menu"
item_3/text = "3D Left"
item_4/text = "3D Right"
item_5/text = "3D Bottom"
item_6/text = "2D Menu"
item_7/text = "2D Left"
item_8/text = "2D Right"
item_9/text = "2D Bottom"
item_10/text = "Inspector Bottom"
item_11/text = "Left Dock (Up Left)"
item_12/text = "Left Dock (Bottom Left)"
item_13/text = "Left Dock (Up Right)"
item_14/text = "Left Dock (Bottom Right)"
item_15/text = "Right Dock (Up Left)"
item_16/text = "Right Dock (Bottom Left)"
item_17/text = "Right Dock (Up Right)"
item_18/text = "Right Dock (Bottom Right)"

[node name="About" type="Window" parent="."]
title = "About TopNote"
initial_position = 1
size = Vector2i(400, 300)
visible = false
unresizable = true
popup_window = true
extend_to_title = true
min_size = Vector2i(400, 300)

[node name="Panel" type="Panel" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="About/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="About/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name"

[node name="Label2" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "TopNote"

[node name="Label3" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Version"

[node name="Label4" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "1.0.0-S (official)"

[node name="Label5" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Publisher"

[node name="Label6" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "GDPulse"

[node name="Label7" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Author(s)"

[node name="Label8" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2
text = "mkh-user"

[node name="Label9" type="Label" parent="About/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="About/VBoxContainer"]
layout_mode = 2
text = "Links"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="About/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="LinkButton" type="LinkButton" parent="About/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Project Page"
underline = 1
uri = "https://gdpulse.github.io/TopNote/"

[node name="LinkButton2" type="LinkButton" parent="About/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Repository"
underline = 1
uri = "https://github.com/GDPulse/TopNote/"

[node name="LinkButton3" type="LinkButton" parent="About/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "GDPulse"
underline = 1
uri = "https://github.com/GDPulse/"

[node name="LinkButton4" type="LinkButton" parent="About/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "mkh-user"
underline = 1
uri = "https://github.com/mkh-user/"

[node name="Label2" type="Label" parent="About/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Control" type="Control" parent="About/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="About/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_right = -100.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("2_84iuo")
expand_mode = 5
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="RemoveTodo" type="ConfirmationDialog" parent="."]
title = "Remove ToDo?"
initial_position = 1
ok_button_text = "Remove"
dialog_text = "Remove To do item cann't undo and To do item will distroy!"

[node name="CodeEditor" type="Window" parent="."]
title = "Code Save Editor"
initial_position = 1
size = Vector2i(400, 300)
visible = false
min_size = Vector2i(400, 300)
script = ExtResource("6_gujsj")

[node name="VBoxContainer" type="VBoxContainer" parent="CodeEditor"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="CodeEditor/VBoxContainer"]
layout_mode = 2
placeholder_text = "Name"

[node name="Editor" type="CodeEdit" parent="CodeEditor/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
placeholder_text = "Enter code"
scroll_smooth = true
scroll_past_end_of_file = true
minimap_draw = true
minimap_width = 40
draw_tabs = true
draw_spaces = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="text_changed" from="VBox/Tab/Notes" to="." method="_on_notes_text_changed"]
[connection signal="child_entered_tree" from="VBox/Tab/ToDo/Sample" to="." method="_on_sample_child_entered_tree"]
[connection signal="pressed" from="VBox/Tab/ToDo/Sample" to="." method="_save_todo"]
[connection signal="pressed" from="VBox/Tab/ToDo/Sample" to="VBox/Tab/ToDo/Sample" method="_on_pressed"]
[connection signal="text_changed" from="VBox/Tab/ToDo/Tools/Search" to="." method="_todo_search"]
[connection signal="item_selected" from="VBox/Tab/ToDo/Tools/Filter" to="." method="_todo_search"]
[connection signal="pressed" from="VBox/Tab/ToDo/Add/Add" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Sample/HBox/Copy" to="VBox/Tab/Codes/Sample" method="_on_button_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Sample/HBox/Edit" to="VBox/Tab/Codes/Sample" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Sample/HBox/Remove" to="VBox/Tab/Codes/Sample" method="_on_button_3_pressed"]
[connection signal="text_changed" from="VBox/Tab/Codes/Find/Search" to="." method="_on_search_text_changed"]
[connection signal="item_selected" from="VBox/Tab/Codes/Find/Filter" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="VBox/Tab/Codes/New/Add" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/Sample/HBox/Copy" to="VBox/Tab/Codes/Scroll/HFlow/Sample" method="_on_button_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/Sample/HBox/Edit" to="VBox/Tab/Codes/Scroll/HFlow/Sample" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/Sample/HBox/Remove" to="VBox/Tab/Codes/Scroll/HFlow/Sample" method="_on_button_3_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588/HBox/Copy" to="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588" method="_on_button_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588/HBox/Edit" to="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588" method="_on_button_2_pressed"]
[connection signal="pressed" from="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588/HBox/Remove" to="VBox/Tab/Codes/Scroll/HFlow/@VBoxContainer@17588" method="_on_button_3_pressed"]
[connection signal="text_changed" from="VBox/Tab/Linked Notes" to="." method="_on_linked_notes_text_changed"]
[connection signal="close_requested" from="MoveTo" to="." method="_on_window_close_requested"]
[connection signal="close_requested" from="About" to="." method="_on_window_2_close_requested"]
[connection signal="child_exiting_tree" from="CodeEditor" to="." method="_on_code_editor_child_exiting_tree"]
[connection signal="close_requested" from="CodeEditor" to="CodeEditor" method="_on_close_requested"]
